Ahora el index.html tiene codigo html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Prueba</title>
 </head>
 <body>
-    Texto html
+    Primera pagina xd
     <script src="app.js"></script>
 </body>
 </html>
